# f1r3fly

./: .drone.yml  .editorconfig  .env  .gitignore  .gitmodules  .jvmopts  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cloud_brain_dump.md  Cross.toml  DEVELOPER.md  F1r3fly_ASI_Oracle.md  LICENSE.TXT  README.md  Tiltfile  build.sbt  delete_data.sh  flake.nix  rename_rev_to_asi.sh
bitcoin-anchor/: Cargo.toml  DEVELOPER.md  README.md  SIGNET.md
bitcoin-anchor-ffi/: Cargo.toml
bitcoin-anchor-ffi/examples/: simple_test.rs
bitcoin-anchor-ffi/src/: lib.rs
bitcoin-anchor/examples/: create_f1r3fly_psbt.rs  create_f1r3fly_psbt_regtest.rs  create_f1r3fly_psbt_signet.rs  debug_network.rs  demo_broadcast_workflow.rs  demo_f1r3fly_transaction.rs  monitor_regtest_address.rs  monitor_testnet_address.rs  setup_testnet_wallet.rs  test_testnet_connectivity.rs  test_utxo_fetching.rs  verify_f1r3fly_commitment.rs
bitcoin-anchor/src/: config.rs  error.rs  lib.rs  recovery.rs  validation.rs
bitcoin-anchor/src/bitcoin/: esplora.rs  mod.rs  opret.rs  psbt.rs  transaction.rs
bitcoin-anchor/src/commitment/: f1r3fly_state.rs  mod.rs  serialization.rs
bitcoin-anchor/src/config/: anchor_config.rs  mod.rs
bitcoin-anchor/src/rgb/: mod.rs  mpc.rs  protocol.rs
block-storage/: Cargo.toml
block-storage/src/rust/: block_store.rs  key_value_block_store.rs  mod.rs
block-storage/tests/: block_dag_storage_test.rs  mod.rs
casper/: Cargo.toml  README.md
casper/src/rust/: block_status.rs  casper.rs  equivocation_detector.rs  errors.rs  estimator.rs  last_finalized_height_constraint_checker.rs  mod.rs  multi_parent_casper_impl.rs  reporting_proto_transformer.rs  safety_oracle.rs  synchrony_constraint_checker.rs  validate.rs  validator_identity.rs
casper/tests/: CORE_RSPACE_INVESTIGATION.md  FINAL_ROOT_CAUSE_IDENTIFIED.md  SPURIOUS_CHANNEL_INVESTIGATION.md  STD_OUT_ACK_BUG.md  mod.rs  runtime_spec.rs
casper/tests/add_block/: mod.rs  proposer_spec.rs
casper/tests/api/: graph_generator_tests.rs  machine_verifiable_dag_tests.rs  mod.rs
casper/tests/blocks/: block_processor_test.rs  mod.rs
casper/tests/engine/: approve_block_protocol_test.rs  engine_cell_test.rs  lfs_block_requester_effects_spec.rs  lfs_block_requester_state_spec.rs  lfs_state_requester_effects_spec.rs  lfs_state_requester_state_spec.rs  mod.rs  running_spec.rs  setup.rs
casper/tests/estimator/: estimator_test.rs  mod.rs
casper/tests/finality/: finalizer_test.rs  mod.rs
casper/tests/helper/: block_dag_storage_fixture.rs  block_generator.rs  block_util.rs  mock_casper.rs  mod.rs  no_ops_casper_effect.rs  unlimited_parents_estimator_fixture.rs
casper/tests/merging/: merge_number_channel_spec.rs  merging_cases.rs  mod.rs
casper/tests/safety/: clique_oracle_test.rs  mod.rs
casper/tests/sync/: block_retriever_request_all_spec.rs  block_retriever_spec.rs  mod.rs
casper/tests/util/: casper_util_test.rs  clique_test.rs  dag_operations_test.rs  genesis_builder.rs  mod.rs  test_mocks.rs
casper/tests/validate/: mod.rs  validate_test.rs
comm/: Cargo.toml  README.md  build.rs
comm/src/: lib.rs
comm/src/rust/: errors.rs  mod.rs  peer_node.rs  test_instances.rs  utils.rs
comm/tests/: mod.rs  test_instances.rs  uri_parse_spec.rs
comm/tests/discovery/: distance_spec.rs  kademlia_rpc_runtime.rs  kademlia_rpc_spec.rs  kademlia_spec.rs  mod.rs  peer_table_spec.rs
comm/tests/rp/: clear_connections_spec.rs  connect_spec.rs  connections_spec.rs  find_and_connect_spec.rs  mod.rs
comm/tests/transport/: grpc_transport_spec.rs  mod.rs  stream_handler_spec.rs  transport_layer_runtime.rs  transport_layer_spec.rs
crypto/: Cargo.toml  README.md
crypto/src/rust/: mod.rs  private_key.rs  public_key.rs
crypto/tests/util/: certificate_helper_spec.rs  der_converter_spec.rs  mod.rs
models/: Cargo.toml  README.md  build.rs
models/src/: generated.rs  lib.rs
models/src/rust/: block_hash.rs  block_implicits.rs  block_metadata.rs  bundle_ops.rs  equivocation_record.rs  mod.rs  normalizer_env.rs  par_map.rs  par_map_type_mapper.rs  par_set.rs  par_set_type_mapper.rs  sorted_par_hash_set.rs  sorted_par_map.rs  string_ops.rs  utils.rs  validator.rs
models/src/scalapb/: scalapb.proto
models/tests/: mod.rs  par_sort_matcher_test.rs  scored_term_sort_test.rs  sorted_par_hash_set_test.rs  sorted_par_map_test.rs  var_sort_matcher_test.rs
node/: Cargo.toml
node-cli/: Cargo.toml  Makefile  README.md  VALIDATOR4_BONDING_GUIDE.md  sync_finalization.sh
node-cli/src/: args.rs  dispatcher.rs  error.rs  f1r3fly_api.rs  lib.rs  main.rs
node-cli/src/commands/: crypto.rs  mod.rs  network.rs  query.rs
node-cli/src/utils/: crypto.rs  http.rs  mod.rs  output.rs
node/src/: lib.rs
node/src/rust/: mod.rs  rho_trie_traverser.rs
node/tests/: rho_trie_traverser_test.rs
rholang/: Cargo.toml  Cross.toml  README.md  build.rs  clean_tree_sitter_generated_files.sh
rholang/crates/ffi/: Cargo.toml
rholang/crates/interpreter/: Cargo.toml
rholang/crates/tree_sitter_rholang/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  (+8 more)
rholang/examples/: EvalTest.rho  SandboxTest.rho  fileinteract.rho  filestore.rho  fuseMap.rho  fuseRead.rho  fuseWrite.rho  loopback.rho  message.txt  simpleInsertCall.rho  simpleInsertTest.rho  tut-ai.rho  tut-registry-split2.rho  tut-registry.rho
rholang/src/: lib.rs  main.rs
rholang/tests/: crypto_channels_spec.rs  eval_inj_test.rs  interpreter_spec.rs  mod.rs  parser_test.rs  reduce_spec.rs  runtime_spec.rs  substitute_test.rs
rspace++/: Cargo.toml  Cross.toml  README.md  build.rs  docker_fs_out.txt
rspace++/proptest-regressions/: hot_store_spec.txt
rspace++/src/: diskconc.rs  diskseq.rs  lib.rs  main.rs  memconc.rs  memseq.rs  rhoapi.rs  rhotypes.rs  rspace.rs  rspace_plus_plus_types.rs  rtypes.rs  setup.rs
rspace++/tests/: diskconc_test.rs  diskseq_test.rs  export_import_tests.rs  hot_store_spec.rs  install_test.rs  main.rs  memconc_test.rs  memseq_test.rs  mod.rs  replay_rspace_tests.rs  reporting_rspace_tests.rs  rspace_test.rs  storage_actions_test.rs
shared/: Cargo.toml  README.md
(+1119 files in other folders)
