[package]
name = "bitcoin-anchor"
version = "0.1.0"
edition = "2021"
authors = ["F1r3fly Team"]
description = "Bitcoin L1 anchoring for F1r3fly RSpace state"
license = "Apache-2.0"

[dependencies]
# Error handling and serialization
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Cryptographic primitives
blake2 = "0.10"
hex = "0.4"

# RGB ecosystem integration
rgb-std = { version = "0.12.0-rc.2", features = ["bitcoin"] }
bp-core = "0.12"
commit_verify = { version = "0.12.0", features = ["rand"] }
bp-std = { version = "0.12.0-rc.3", features = ["client-side-validation"] }

# Bitcoin transaction handling
bitcoin = "0.32"
