[package]
name = "bitcoin-anchor"
version = "0.1.0"
edition = "2021"
authors = ["F1r3fly Team"]
description = "Bitcoin L1 anchoring for F1r3fly RSpace state"
license = "Apache-2.0"

[dependencies]
# Error handling and JSON parsing
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Cryptographic primitives
blake2 = "0.10"
hex = "0.4"

# Bitcoin protocol standards (for Network and basic types)
bp-std = "0.12.0-rc.3"

# Bitcoin transaction handling
bitcoin = { version = "0.32", features = ["serde"] }

# Blockchain provider integration
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
