[package]
name = "block-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rspace_plus_plus = { path = "../rspace++" }
models = { path = "../models" }
crypto = { path = "../crypto" }
lz4_flex = "0.11.3"
prost = "0.13.5"
proptest = "1.6.0"
hex = "0.4.3"
dashmap = "6.1.0"
rayon = "1.10.0"
tokio = "1.44.1"
once_cell = "1.21.1"
log = "0.4.27"
env_logger = "0.11.8"

[build-dependencies]
