[package]
name = "casper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
comm = { path = "../comm" }
crypto = { path = "../crypto" }
graphz = { path = "../graphz" }
models = { path = "../models" }
rholang = { path = "../rholang" }
rspace_plus_plus = { path = "../rspace++" }
block-storage = { path = "../block-storage" }
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
prost = "0.13.5"
lazy_static = "1.5.0"
hex = "0.4.3"
dashmap = "6.1.0"
tempfile = "3.18.0"
bincode = "1.3.3"
serde = "1.0.219"
log = "0.4.27"
byteorder = "1.5.0"
env_logger = "0.11.8"
rand = "0.9.0"
futures = "0.3.31"
uuid = "1.16.0"
itertools = "0.13.0"
regex = "1.10.6"
thiserror = "2.0.9"
# LFS Block Requester dependencies
num_cpus = "1.0"
async-stream = "0.3"
tokio-stream = "0.1"

[build-dependencies]
