[package]
name = "comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4", features = ["serde"] }
crypto = { path = "../crypto" }
dashmap = "6.1"
env_logger = "0.11.8"
flume = "0.11"
hex = "0.4.3"
log = "0.4"
models = { path = "../models" }
paste = "1.0"
proptest = "1.6.0"
prost = "0.13.5"
rand = "0.9.1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.13", features = ["prost", "transport", "tls-webpki-roots"] }
url = "2.5.4"
# TLS and certificate dependencies
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26" 
x509-parser = "0.16"
webpki = "0.22"
rustls-webpki = "0.102"
thiserror = "1.0"
p256 = { version = "0.13", features = ["ecdsa"] }
futures = "0.3.31"
tower = "0.5"
http = "1.0"
hyper = { version = "1.0", features = ["http1", "http2"] }

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
