[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
byteorder = "1.5.0"
rand = "0.8.5"
sha2 = "0.10.8"
k256 = "0.13.4"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
typenum = "1.17.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = "0.6"
yasna = { version = "0.5.2", features = ["num-bigint"] }
num-bigint = "0.4.6"
