[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
base64 = "0.22"
bincode = "1.3.3"
blake2 = "0.10.6"
byteorder = "1.5.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ff = "0.13.1"
getrandom = "0.2.16"
hex = "0.4.3"
k256 = "0.13.4"
log = "0.4.27"
nanorand = "0.7.0"
num-bigint = "0.4.6"
p256 = "0.13"
pkcs8 = "0.10"
prost = "0.13.5"
rand = "0.8.5"
rand_core = "0.6"
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
shared = { path = "../shared" }
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
typenum = "1.17.0"
x509-certificate = "0.23"
yasna = { version = "0.5.2", features = ["num-bigint"] }

[dev-dependencies]
proptest = "1.0"
