[package]
name = "f1r3fly-crypto"      
version = "0.1.0"
edition = "2021"
description = "F1r3fly cryptography module providing hash algorithms, digital signatures, and key management"
license = "Apache-2.0"
repository = "https://github.com/F1R3FLY-io/f1r3fly" 
homepage = "https://f1r3fly.io"
authors = ["F1r3fly team"]
readme = "README.md"
keywords = ["cryptography", "crypto", "signatures", "hash", "blockchain"]
categories = ["cryptography"]
documentation = "https://docs.rs/f1r3fly-crypto"

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
byteorder = "1.5.0"
rand = "0.8.5"
sha2 = "0.10.8"
k256 = "0.13.4"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
typenum = "1.17.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = "0.6"
yasna = { version = "0.5.2", features = ["num-bigint"] }
num-bigint = "0.4.6"
