[package]
name = "models"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
hex = "0.4.3"
prost = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["v4"] }

[build-dependencies]
prost-build = "0.12.4"
