[package]
name = "node_cli"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
crypto = { path = "../crypto" }
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
