[package]
name = "node_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
shared = { path = "../shared" }
crypto = { path = "../crypto" }
rholang = { path = "../rholang" }
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
clap = { version = "4.4.6", features = ["derive"] }
secp256k1 = { version = "0.28.0", features = ["rand-std"] }
blake2 = "0.10.6"
typenum = "1.16.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = [
	"json",
	"rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.0"
sha3 = "0.10.8"
sha2 = "0.10.8"
