[package]
name = "rholang"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
models = { path = "../models" }
shared = { path = "../shared" }
rspace_plus_plus = { path = "../rspace++" }
tree-sitter-rholang = { path = "src/main/tree_sitter/" }
itertools = "0.10.2"
serde = "1.0"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
cc = { version = "1.1.12", features = [] }
hex = "0.4.3"
prost = "0.12.4"
zbase32 = "0.1.2"
lazy_static = "1.5.0"
futures = "0.3.30"
bincode = "1.3.3"
regex = "1.10.6"
rand = "0.8.5"
uuid = { version = "1", features = ["v4"] }
pretty_assertions = "1.3.0"
thiserror = "2.0.9"

[build-dependencies]
cc = "1.0"
