[package]
name = "f1r3fly-rholang"
version = "0.1.0"
edition = "2021"
description = "F1r3fly Rholang programming language - concurrent, message-passing smart contract language"
license = "MIT"
repository = "https://github.com/F1R3FLY-io/f1r3fly"
homepage = "https://f1r3fly.io"
authors = ["F1r3fly team"]
readme = "README.md"
keywords = ["rholang", "programming-language", "smart-contracts", "f1r3fly", "concurrent"]
categories = ["development-tools::build-utils", "parser-implementations"]
documentation = "https://docs.rs/f1r3fly-rholang"
include = [
    "src/lib.rs",
    "src/main.rs", 
    "src/rust/**/*",
    "tests/**/*",
    "examples/**/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "rust-toolchain.toml",
    "Cross.toml",
    "clean_tree_sitter_generated_files.sh",
    "rho2rbl"
]

[profile.dev]
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
f1r3fly-crypto = "0.1.0"
f1r3fly-models = "0.1.0"
f1r3fly-shared = "0.1.0"
f1r3fly-rspace-plus-plus = "0.1.0"
f1r3fly-tree-sitter-rholang = "0.1.0"
itertools = "0.10.2"
serde = "1.0"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
cc = { version = "1.1.12", features = [] }
hex = "0.4.3"
prost = "0.13.5"
zbase32 = "0.1.2"
lazy_static = "1.5.0"
futures = "0.3.30"
bincode = "1.3.3"
regex = "1.10.6"
rand = "0.8.5"
uuid = { version = "1", features = ["v4"] }
pretty_assertions = "1.3.0"
thiserror = "2.0.9"
anyhow = "1.0.95"
k256 = { version = "0.13.4", features = ["ecdsa"] }
openai-api-rs = "6.0.3"
dotenv = "0.15.0"
openssl = { version = "0.10", features = ["vendored"] }
tempfile = "3.19.1"

[build-dependencies]
