[package]
name = "rspace_plus_plus"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = ["libs/rspace_rhotypes"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
bincode = "1.0"
heed = "0.11.0"
serde = "1.0.156"
serde_json = "1.0"
dashmap = "5.4.0"
prost = "0.13.5"
bit-set = "0.5.3"
monadic = "0.5.5"
futures = "0.3"
state = "0.6.0"
itertools = "0.10.2"
blake2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
blake3 = "1.5.0"
async-trait = "0.1.74"
bytes = "1.5.0"
log = "0.4.20"
rayon = "1.8.1"
hex = "0.4.3"
proptest = "1.4.0"
lazy_static = "1.4.0"
chrono = "0.4.38"
once_cell = "1.19.0"
rstest = "0.19.0"
proptest-derive = "0.5.1"
counter = "0.5.7"
multiset = "0.0.5"

[dependencies.uuid]
version = "1.4.0"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
test-env-helpers = "0.2.2"
