[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.0"
heed = "0.11.0"
hex = "0.4.3"
proptest = "1.6.0"
prost = "0.13.5"
serde = "1.0.219"
serde_bytes = "0.11.17"
