[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.0"
heed = "0.11.0"
hex = "0.4.3"
proptest = "1.6.0"
prost = "0.13.5"
serde = "1.0.219"
serde_bytes = "0.11.17"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tonic = "0.13"
tower = "0.5"
http = "1.0"
http-body-util = "0.1"
bytes = "1.0"
log = "0.4.27"
lz4_flex = "0.11.3"
rand = "0.8"
