[package]
name = "rholang"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitvec = "1.0.1"
cc = { version = "1.1.12", features = [] }
crypto = { path = "../../../crypto" }
futures = "0.3.30"
hex = "0.4.3"
indexmap = "2.7.1"
indextree = "4.7.3"
itertools = "0.10.2"
lazy_static = "1.5.0"
models = { path = "../../../models" }
pretty_assertions = "1.3.0"
prost = "0.12.4"
rand = "0.8.5"
regex = "1.10.6"
rspace_plus_plus = { path = "../../../rspace++" }
serde = "1.0"
shared = { path = "../../../shared" }
smallvec = { version = "1.13.2", features = [
    "const_generics",
    "const_new",
    "union",
] }
stacker = "0.1.19"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.25.3"
tree-sitter-rholang = { path = "../tree_sitter_rholang" }
tree-sitter-rust = "0.23"
typed-arena = "2.0.2"
uuid = { version = "1", features = ["v4"] }
zbase32 = "0.1.2"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
