[package]
name = "rspace_plus_plus_rhotypes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rspace_plus_plus = { path = "../../../rspace++" }
models = { path = "../../../models" }
rholang = { path = "../../../rholang" }
shared = { path = "../../../shared" }
prost = "0.13.5"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dashmap = "5.4.0"
rand = "0.8.5"
serde = "1.0.197"
bincode = "1.3.3"
chrono = "0.4.38"
