[package]
name = "f1r3fly-tree-sitter-rholang"
description = "F1r3fly Rholang grammar for tree-sitter - incremental parsing for Rholang smart contracts"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rholang", "f1r3fly"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/F1R3FLY-io/f1r3fly"
homepage = "https://f1r3fly.io"
authors = ["F1r3fly team"]
documentation = "https://docs.rs/f1r3fly-tree-sitter-rholang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "LICENSE", "README.md", "Cargo.toml"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = { version = "0.22" }

[build-dependencies]
cc = "1.0.87"
